--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta name="google-site-verification" content="RonDKE8B6pFaCFsQVk-doFLUmi7UrbpHonO_-vueUmI" />
     <title>Portfolio Friedrich Wessel by FriedrichWessel</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
