--- a/src/test.html
+++ b/src/test.html
@@ -1,168 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Masonry Grid with Fixed Columns</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Custom CSS */
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pinterest-like Grid Layout</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            margin: 0;
+            background-color: #f2f2f2;
+        }
 
-    /* Force container to use grid layout */
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-    }
+        .grid-container {
+            column-count: 2; /* Default to 2 columns */
+            column-gap: 15px;
+            width: 90%;
+            max-width: 1200px;
+            margin: 20px 0;
+        }
 
-    /* Ensure grid items have consistent styling */
-    .grid-item-container {
-      display: flex;
-      flex-direction: column;
-      background: #fff;
-      border: 1px solid #ddd;
-      padding: 10px;
-    }
+        .grid-item {
+            background-color: #fff;
+            display: inline-block;
+            margin-bottom: 15px;
+            width: 100%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+            overflow: hidden;
+            text-align: center;
+            position: relative;
+        }
 
-    .grid-item {
-      position: relative;
-      margin-bottom: 10px;
-    }
+        .img-container {
+            background-color: #e0e0e0; /* Light grey background */
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    .grid-item img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
+        .img-container img {
+            max-width: 100%;
+            height: auto;
+        }
 
-    .grid-item .content {
-      height: 0;
-      opacity: 0;
-      overflow: hidden;
-    }
+        .overlay {
+            max-height: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 0 20px;
+            text-align: center;
+            overflow: hidden;
+            position: relative;
+            z-index: 1;
+            transition: max-height 0.3s ease, padding 0.3s ease;
+        }
 
-    .grid-item:hover .content {
-      height: auto;
-      opacity: 1;
-    }
+        .grid-item:hover .overlay {
+            max-height: 200px; /* Adjustable maximum height */
+            padding: 20px;
+        }
 
-    .grid-item .content-inner {
-      padding: 10px 0;
-    }
-  </style>
+        @media (max-width: 800px) {
+            .grid-container {
+                column-count: 1; /* Decrease to 1 column on smaller screens */
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="container mt-5">
-    <div class="grid">
-      <div class="grid-item-container">
+    <div class="grid-container">
         <div class="grid-item">
-          <img src="https://via.placeholder.com/400x300" alt="Placeholder Image">
-          <div class="content">
-            <div class="content-inner">
-              <h5 class="mt-3">Headline 1</h5>
-              <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x300" alt="Placeholder Image 1">
             </div>
-          </div>
+            <div class="overlay">
+                <h2>Headline 1</h2>
+                <p>Description for image 1</p>
+            </div>
         </div>
         <div class="grid-item">
-          <img src="https://via.placeholder.com/400x400" alt="Placeholder Image">
-          <div class="content">
-            <div class="content-inner">
-              <h5 class="mt-3">Headline 2</h5>
-              <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x150" alt="Placeholder Image 2">
             </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="grid-item-container">
-        <div class="grid-item">
-          <img src="https://via.placeholder.com/400x300" alt="Placeholder Image">
-          <div class="content">
-            <div class="content-inner">
-              <h5 class="mt-3">Headline 3</h5>
-              <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
+            <div class="overlay">
+                <h2>Headline 2</h2>
+                <p>Description for image 2</p>
             </div>
-          </div>
         </div>
         <div class="grid-item">
-          <img src="https://via.placeholder.com/400x250" alt="Placeholder Image">
-          <div class="content">
-            <div class="content-inner">
-              <h5 class="mt-3">Headline 4</h5>
-              <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x250" alt="Placeholder Image 3">
             </div>
-          </div>
+            <div class="overlay">
+                <h2>Headline 3</h2>
+                <p>Description for image 3</p>
+            </div>
         </div>
-
         <div class="grid-item">
-            <img src="https://via.placeholder.com/400x250" alt="Placeholder Image">
-            <div class="content">
-              <div class="content-inner">
-                <h5 class="mt-3">Headline 4</h5>
-                <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
-              </div>
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x400" alt="Placeholder Image 4">
             </div>
-          </div>
-
-          <div class="grid-item">
-            <img src="https://via.placeholder.com/400x350" alt="Placeholder Image">
-            <div class="content">
-              <div class="content-inner">
-                <h5 class="mt-3">Headline 4</h5>
-                <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
-              </div>
+            <div class="overlay">
+                <h2>Headline 4</h2>
+                <p>Description for image 4</p>
             </div>
-          </div>
-
-          <div class="grid-item">
-            <img src="https://via.placeholder.com/400x300" alt="Placeholder Image">
-            <div class="content">
-              <div class="content-inner">
-                <h5 class="mt-3">Headline 4</h5>
-                <p>Multiline description goes here. This is a multiline description. This is a multiline description. This is a multiline description.</p>
-              </div>
+        </div>
+        <div class="grid-item">
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x350" alt="Placeholder Image 5">
             </div>
-          </div>
-      </div>
+            <div class="overlay">
+                <h2>Headline 5</h2>
+                <p>Description for image 5</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x150" alt="Placeholder Image 6">
+            </div>
+            <div class="overlay">
+                <h2>Headline 6</h2>
+                <p>Description for image 6</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x320" alt="Placeholder Image 7">
+            </div>
+            <div class="overlay">
+                <h2>Headline 7</h2>
+                <p>Description for image 7</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x270" alt="Placeholder Image 8">
+            </div>
+            <div class="overlay">
+                <h2>Headline 8</h2>
+                <p>Description for image 8</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x180" alt="Placeholder Image 9">
+            </div>
+            <div class="overlay">
+                <h2>Headline 9</h2>
+                <p>Description for image 9</p>
+            </div>
+        </div>
+        <div class="grid-item">
+            <div class="img-container">
+                <img src="https://via.placeholder.com/200x330" alt="Placeholder Image 10">
+            </div>
+            <div class="overlay">
+                <h2>Headline 10</h2>
+                <p>Description for image 10</p>
+            </div>
+        </div>
     </div>
-  </div>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      // Initialize Masonry on each grid-item-container
-      $('.grid-item-container').each(function() {
-        var $grid = $(this).masonry({
-          itemSelector: '.grid-item',
-          percentPosition: true,
-          columnWidth: '.grid-item'
-        });
-
-        // Adjust height dynamically based on content
-        $(this).find('.grid-item').hover(
-          function() {
-            var content = $(this).find('.content');
-            content.css({
-              'height': content.find('.content-inner').prop('scrollHeight') + 'px',
-              'opacity': 1
-            });
-
-            $grid.masonry('layout'); // Trigger Masonry layout update
-          },
-          function() {
-            var content = $(this).find('.content');
-            content.css({
-              'height': '0',
-              'opacity': 0
-            });
-
-            $grid.masonry('layout'); // Trigger Masonry layout update
-          }
-        );
-      });
-    });
-  </script>
 </body>
 </html>
